--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-jsx-highmaps": "^2.0.1",
     "react-loader-spinner": "^3.1.5",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
