--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "chart.js": "^2.9.3",
     "highcharts": "^8.0.4",
     "highcharts-react-official": "^3.0.0",
     "react": "^16.13.1",
