--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "highcharts-react-official": "^3.0.0",
     "react": "^16.13.1",
     "react-async": "^10.0.0",
+    "react-bootstrap": "^1.0.0",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
+    "react-helmet": "^5.2.1",
     "react-highcharts": "^16.1.0",
     "react-loader-spinner": "^3.1.5",
     "react-router-dom": "^5.1.2",
