--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-loader-spinner": "^3.1.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
+    "react-tabs": "^3.1.0",
     "react-transition-group": "^4.3.0"
   },
   "scripts": {
