--- a/package.json
+++ b/package.json
@@ -4,19 +4,23 @@
   "private": true,
   "dependencies": {
     "chart.js": "^2.9.3",
+    "google-map-react": "^1.1.7",
     "highcharts": "^8.0.4",
     "highcharts-react-official": "^3.0.0",
     "jquery": "^3.4.1",
     "jquery-react": "^1.0.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-async": "^10.0.0",
     "react-bootstrap": "^1.0.0",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
+    "react-google-maps": "^9.4.5",
     "react-helmet": "^5.2.1",
     "react-highcharts": "^16.1.0",
     "react-icons": "^3.9.0",
     "react-loader-spinner": "^3.1.5",
+    "react-pure-render": "^1.0.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "react-tabs": "^3.1.0",
