added delete and update API

--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "react-icons": "^3.9.0",
     "react-loader-spinner": "^3.1.5",
     "react-pure-render": "^1.0.2",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "react-tabs": "^3.1.0",
-    "react-transition-group": "^4.3.0"
+    "react-transition-group": "^4.3.0",
+    "react-use-sessionstorage": "^1.0.2",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
