--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-tabs": "^3.1.0",
     "react-transition-group": "^4.3.0",
     "react-use-sessionstorage": "^1.0.2",
+    "react-web-share-api": "0.0.2",
     "redux": "^4.0.5"
   },
   "scripts": {
