--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "chart.js": "^2.9.3",
+    "firebase": "^7.14.1",
     "google-map-react": "^1.1.7",
     "google-maps-react": "^2.0.2",
     "highcharts": "^8.0.4",
