--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "covid-19",
+  "homepage": "https://sushil-kumr.github.io/covid-19-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "chart.js": "^2.9.3",
+    "esri-loader": "^2.14.0",
     "firebase": "^7.14.1",
     "google-map-react": "^1.1.7",
     "google-maps-react": "^2.0.2",
@@ -38,7 +40,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -54,5 +58,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
