--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "covid-19",
-  "homepage": "https://sushil-kumr.github.io/covid-19-react",
+  "homepage": "http://sushil-kumr.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
